--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Lina Cambridge <lina@mozilla.com>"]
 [dependencies]
 failure = "0.1.1"
 failure_derive = "0.1.1"
+itertools = "0.7.3"
 log = "0.4"
 
 [dev-dependencies]
