Add ASCII art tree

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ authors = ["Lina Cambridge <lina@mozilla.com>"]
 [dependencies]
 failure = "0.1.1"
 failure_derive = "0.1.1"
+itertools = "0.7.3"
 lazy_static = "1.0"
 log = "0.4"
