--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ authors = ["Lina Cambridge <lina@mozilla.com>"]
 license = "Apache-2.0"
 
 [dependencies]
-failure = "0.1.1"
 failure_derive = "0.1.1"
 log = "0.4"
+
+[dependencies.failure]
+version = "0.1.1"
+features = ["failure_derive"]
 
 [dev-dependencies]
 env_logger = "0.5.12"
