--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "dogear"
 version = "0.1.0"
 authors = ["Lina Cambridge <lina@mozilla.com>"]
 license = "Apache-2.0"
+exclude = [".travis.yml", "rustfmt.toml"]
 
 [dependencies]
 log = "0.4"
