--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vellum"
+name = "dogear"
 version = "0.1.0"
 authors = ["Lina Cambridge <lina@mozilla.com>"]
 license = "Apache-2.0"
