--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.1"
 repository = "https://github.com/linacambridge/dogear"
 authors = ["Lina Cambridge <lina@mozilla.com>"]
 license = "Apache-2.0"
-exclude = [".travis.yml", "rustfmt.toml"]
+exclude = [".travis", ".travis.yml"]
 
 [dependencies]
 log = "0.4"
