--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ repository = "https://github.com/linacambridge/dogear"
 authors = ["Lina Cambridge <lina@mozilla.com>"]
 license = "Apache-2.0"
 exclude = [".travis", ".travis.yml"]
+edition = "2018"
