--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.2.0"
 repository = "https://github.com/mozilla/dogear"
 authors = ["Lina Cambridge <lina@mozilla.com>"]
 license = "Apache-2.0"
-exclude = [".travis", ".travis.yml"]
+exclude = ["/.travis/**", ".travis.yml"]
 edition = "2018"
 
 [dependencies]
