Re-add the `log` crate for logging.
On Slack, @mhammond suggested using `log::Level` instead of rolling
our own. It turns out that `log` exposes all the building blocks for
logging messages, too, so we can have `Driver` return an implementation
of `log::Log` instead of handling logging ourselves.

The default implementation returns the global logger, so things will
"just work" in Rust Places. On Desktop, we'll have `XpComLogger`
implement `log::Log`, and return that instead of the global one.

See #20.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,8 @@ exclude = ["/.travis/**", ".travis.yml"]
 edition = "2018"
 
 [dependencies]
+log = "0.4"
 smallbitvec = "2.3.0"
+
+[dev-dependencies]
+env_logger = "0.5.6"
