--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ cache:
 env:
   global:
     - KCOV_VERSION=36
+    - MDBOOK_VERSION=0.2.1
     - PATH=$HOME/.local/bin:$PATH
 
 before_install:
@@ -37,6 +38,15 @@ install:
 script:
   - cargo build
   - cargo test
+  - mdbook build
 
 after_success:
   - ./.travis/after_success.sh
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  local-dir: book
+  github-token: $GH_DEPLOY_TOKEN
+  on:
+    branch: master
